--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ h2 {
   display: grid;
   gap: 7rem 5rem;
   justify-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 320px));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
 }
 .plan {
   font-size: 1.8rem;
@@ -258,9 +258,9 @@ h2 {
   display: grid;
   justify-content: center;
   gap: 3rem 4rem;
-
 }
 .contact-us__form {
+  max-width: 300px;
   height: auto;
 }
 .contact-us__map {
@@ -279,6 +279,7 @@ h2 {
   }
   .contact-us__form {
     grid-area: form;
+    max-width: 500px;
   }
   .contact-us__map {
     display: block;
@@ -368,7 +369,7 @@ h2 {
   height: 100%;
   border: 1px solid #ccc;
   margin: 4rem 1rem 1rem;
-  padding: 5.2rem;
+  padding: 5.2rem 2rem;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.06);
 }
@@ -731,7 +732,7 @@ textarea {
   }
   .intro-btn {
     margin: 50px 10% 50px 0;
-    width: 528px;
+    max-width: 528px;
     padding: 25px;
     align-self: flex-end;
   }
