--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,15 @@ h2 {
   align-items: center;
   max-width: 250px;
 }
+.main-contact-us{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.main-contact-us h2{
+  font-size: 3rem;
+}
 @media screen and (min-width: 1024px) {
   .contact-us__icons .icon-holder {
     display: flex;
@@ -850,6 +859,9 @@ textarea {
 }
 .tab-content.active {
   display: flex;
+}
+.tab.active {
+  opacity: 1;
 }
 .block {
   padding: 6rem 2rem;
